# gawake-cli

./: .gitignore  README.md  com.kelvinnovais.Gawake.json  config.sh  install.sh  io.github.kelvinnovais.Gawake-2.json  io.github.kelvinnovais.Gawake.json  meson.build  meson_options.txt  uninstall.sh
.flatpak-builder/cache/refs/heads/x86_64-com.kelvinnovais.Gawake.json/: init
.flatpak-builder/checksums/: x86_64-com.kelvinnovais.Gawake.json
CLI/: Makefile  backend.py  cron_toff.c  cron_ton.c  db_checker.c  gawake  gawake-cli.py  gawake-schedule.py  gawake.h  install.sh  main.c
CLI/src/: cron_toff.c  cron_ton.c  db_checker.c  main.c
CLI/src/include/: gawake.h
GUI/: #user_interface.glade#  gawake.py  teste.py  user_interface.glade  user_interface.glade~
cli/: Makefile  install.sh  uninstall.sh
cli/src/: cron_toff.c  db_checker.c  main.c
cli/src/include/: gawake.h  wday.h
cli/src/utils/: wday.c
data/: com.kelvinnovais.Gawake.desktop.in  com.kelvinnovais.Gawake.metainfo.xml.in  io.github.kelvinnovais.Gawake.appdata.xml.in  io.github.kelvinnovais.Gawake.desktop.in  meson.build
gawake-cli/: .gitignore  Makefile  gawake  gawake-dbus-server.service  install.sh  meson.build  meson_options.txt
gawake-cli/dbus/system/: policy.conf  system.service
gawake-cli/services/system/: io.github.kelvinnovais.GawakeServer.conf  io.github.kelvinnovais.GawakeServer.service
gawake-cli/services/system/gawake-dbus-server/: io.github.kelvinnovais.GawakeServer.service
gawake-cli/services/system/gawaked/: gawaked.service
gawake-cli/services/user/: user.service
gawake-cli/src/: Makefile  __gawake-cli.h  __gawake-dbus-server.h  __gawaked.h  cron_toff.c  cron_ton.c  database-checker.c  database-connection.c  database-connection.h  database.sql  db_checker.c  dbus-client-sync.c  dbus-client.c  dbus-client.h  dbus-server.c  dbus-server.h  debugger.c  debugger.h  gawake-cli.c  gawake-cli.h  gawake-dbus-server.c  gawake-dbus.c  gawake-dbus.h  gawake-gtypes.h  gawake-service.c  gawake-service.h  gawake-types.c  gawake-types.h  gawake.h  gawaked.c  gawaked.h  get-time.c  get-time.h  init-gawake.c  io.github.kelvinnovais.xml  meson.build  privileges.c  privileges.h  scheduler.c  scheduler.h  (+4 more)
gawake-cli/src/_include/: gawake-cli.h  gawake-dbus-server.h  gawaked.h  scheduler_private.h
gawake-cli/src/dbus-server/: dbus-server.c  dbus-server.h  gdbus-codegenerator.sh  io.github.kelvinnovais.xml  meson.build
gawake-cli/src/gawake-cli/: dbus-client.c  dbus-client.h  main.c  main.h  meson.build
gawake-cli/src/gawake-dbus-server/: database-connection.c  database-connection.h  dbus-server.c  dbus-server.h  gdbus-codegenerator.sh  io.github.kelvinnovais.xml  main.c  main.h  meson.build
gawake-cli/src/gawaked/: _scheduler.h  main.c  main.h  meson.build  privileges.c  scheduler.c  scheduler.h
gawake-cli/src/include/: gawake.h
gawake-cli/src/unused/: dbus-client.c
gawake-cli/src/utils/: colors.h  database-connection.c  database-connection.h  dbus-client.c  debugger.h  gawake-types.c  gawake-types.h  issue.c  validate-rtcwake-args.c  validate-rtcwake-args.h
gui/Gawake/: com.kelvinnovais.Gawake.json
gui/Gawake/.flatpak-builder/cache/refs/heads/x86_64-com.kelvinnovais.Gawake.json/: init
gui/Gawake/.flatpak-builder/checksums/: x86_64-com.kelvinnovais.Gawake.json
gui/Gawake/data/: com.kelvinnovais.Gawake.metainfo.xml.in  meson.build
gui/Gawake/data/icons/: meson.build
gui/Gawake/po/: POTFILES
gui/Gawake/src/: application.vala  database-connection.vala  gawake.gresource.xml  header-bar-switcher.vala  main.vala  meson.build  rule-row.vala  rule-setup-dialog.vala  utils.vala  window.ui  window.vala
gui/Gawake/src/css/: gawake.css
gui/Gawake/src/ui/: rule-row.ui  rule-setup-dialog.ui  window.ui
gui/gawake/: com.kelvinnovais.Gawake.json  meson.build
gui/gawake/.flatpak-builder/cache/refs/heads/x86_64-com.kelvinnovais.Gawake.json/: init
gui/gawake/data/: com.kelvinnovais.Gawake.desktop.in  com.kelvinnovais.Gawake.gschema.xml  meson.build
gui/gawake/po/: POTFILES
gui/gawake/src/: gawake-application.c  gawake-application.h  gawake-window.c  gawake-window.h  gawake.gresource.xml  header-bar.c  main.c  meson.build
gui/gawake/src/ui/: gawake-window.ui  header-bar.ui  window.ui
po/: POTFILES
services/system/gawake-dbus-server/: io.github.kelvinnovais.GawakeServer.conf  io.github.kelvinnovais.GawakeServer.service
services/system/gawaked/: gawaked.service
services/user/: activatable.service
src/: application.vala  cron_ton.c  database-connection.vala  database.sql  dbus-client.vala  dbus-connection.vala  gawake.gresource.xml  main.c  main.vala  meson.build  rule-row.vala  rule-setup-dialog.vala  utils.vala  window.vala
src/css/: gawake.css
src/database-connection/: configuration-manager.c  configuration-manager.h  configuration-reader.c  configuration-reader.h  database-connection-utils.c  database-connection-utils.h  database-connection.c  database-connection.h  gawake-types.c  gawake-types.h  meson.build  rules-manager.c  rules-manager.h  rules-reader.c  rules-reader.h
src/gawake-cli/: main.c  main.h  meson.build
src/gawake-dbus-server/: dbus-server.c  dbus-server.h  main.c  meson.build
src/gawaked/: main.h  meson.build  privileges.h  scheduler.h  week-day.c  week-day.h
src/include/: get_time.h  issue.h
src/ui/: rule-row.ui  rule-setup-dialog.ui  window.ui
src/utils/: colors.h  database-connection.c  database-connection.h  dbus-client.c  dbus-client.h  debugger.c  debugger.h  get-time.h  get_time.c  meson.build  validate-rtcwake-args.c
