database_connection_sources = files(
	'configuration-manager.c',
	'configuration-reader.c',
	'database-connection.c',
	'database-connection-utils.c',
	'gawake-types.c',
	'rules-manager.c',
	'rules-reader.c'

	# TODO
	# '../gawake-dbus-server/dbus-server.c'
)

database_connection_sources += utils_debugger
# gawaked_sources += utils_validate_rtcwake_args
# gawaked_sources += utils_gawake_types